[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/dialogues/unsaved_changes_dialogue.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="UnsavedChangesDialog" type="WindowDialog"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "You have unsaved changes"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 80.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
bbcode_enabled = true
bbcode_text = "You have [wave]unsaved[/wave] changes..."
text = "You have unsaved changes..."
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 360.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 136.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Save changes"

[node name="Discard" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Discard them"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 280.0
margin_right = 360.0
margin_bottom = 26.0
rect_min_size = Vector2( 80, 0 )
text = "Cancel"

[connection signal="popup_hide" from="." to="." method="_on_UnsavedChangesDialog_popup_hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Discard" to="." method="_on_Discard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
